Fixed invisible subordinate selection on member edit

--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -237,7 +237,7 @@ div#popupSlider {
 }
 
 div#displaySubordinates {
-	display: none;
+	/*display: none;*/
 }
 
 /* Notification Styles */
